--- a/1_foundations/Lesson1.ipynb
+++ b/1_foundations/Lesson1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0a9f5f58",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "aa4adc6a",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,24 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8a7109bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "openai_api=os.getenv('OPENAI_API_KEY')\n",
-    "deepseek_api=os.getenv('DEEPSEEK_API_KEY')\n",
-    "anthropic_api=os.getenv('ANTHROPIC_API_KEY')\n",
-    "google_api=os.getenv('GOOGLE_API_KEY')\n",
-    "groq_api=os.getenv('GROQ_API_KEY')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "14604d8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Suppose the prior probability that a patient has a certain disease is 0.01. A diagnostic test for this disease has a sensitivity of 90% (probability of a positive test given the disease) and a specificity of 95% (probability of a negative test given no disease). If the patient tests positive, what is the posterior probability that the patient actually has the disease?"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Question\n",
     "content = 'Give a challenging question based on Bayesian statistics.'\n",
@@ -62,34 +61,15 @@
     "content += 'It is expected that the entity solving the question should make assumption and/or looking up supporting data.'\n",
     "content += 'I will ask this question to another LLM for the answer.'\n",
     "\n",
+    "openai_api=os.getenv('OPENAI_API_KEY')\n",
+    "\n",
     "client = OpenAI(api_key=os.getenv('OPENAI_API_KEY'))\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    messages=[{\"role\": \"user\", \"content\": content}],\n",
     "    model='gpt-4.1-nano'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "a1a3f3d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Suppose that in a certain region, the prevalence of a disease is 2%. A diagnostic test for the disease has a sensitivity (true positive rate) of 95% and a specificity (true negative rate) of 90%. If a person tests positive, what is the posterior probability that they actually have the disease?"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    ")\n",
+    "\n",
     "question = response.choices[0].message.content\n",
     "\n",
     "display(Markdown(question))"
@@ -97,116 +77,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
+   "id": "7f1d9cea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answers = []\n",
+    "competitors = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "57f55c43",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Alright, let's go step-by-step.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "## **1. Define events and known probabilities**\n",
-       "\n",
-       "Let:\n",
-       "\n",
-       "- \\( D \\) = person has the disease  \n",
-       "- \\( T^+ \\) = person tests positive  \n",
-       "\n",
-       "Given:\n",
-       "\n",
-       "\\[\n",
-       "P(D) = 0.02 \\quad \\Rightarrow \\quad P(D^c) = 0.98\n",
-       "\\]\n",
-       "\\[\n",
-       "\\text{Sensitivity} = P(T^+|D) = 0.95\n",
-       "\\]\n",
-       "\\[\n",
-       "\\text{Specificity} = P(T^-|D^c) = 0.90 \\quad \\Rightarrow \\quad P(T^+|D^c) = 1 - 0.90 = 0.10\n",
-       "\\]\n",
-       "\n",
-       "---\n",
-       "\n",
-       "## **2. Apply Bayes' theorem**\n",
-       "\n",
-       "We want \\( P(D|T^+) \\).\n",
-       "\n",
-       "Bayes' theorem:\n",
-       "\n",
-       "\\[\n",
-       "P(D|T^+) = \\frac{P(T^+|D) \\cdot P(D)}{P(T^+|D) \\cdot P(D) + P(T^+|D^c) \\cdot P(D^c)}\n",
-       "\\]\n",
-       "\n",
-       "---\n",
-       "\n",
-       "## **3. Plug in numbers**\n",
-       "\n",
-       "Numerator:\n",
-       "\n",
-       "\\[\n",
-       "P(T^+|D) \\cdot P(D) = 0.95 \\times 0.02 = 0.019\n",
-       "\\]\n",
-       "\n",
-       "Denominator:\n",
-       "\n",
-       "\\[\n",
-       "0.95 \\times 0.02 + 0.10 \\times 0.98\n",
-       "\\]\n",
-       "\\[\n",
-       "= 0.019 + 0.098 = 0.117\n",
-       "\\]\n",
-       "\n",
-       "---\n",
-       "\n",
-       "## **4. Compute posterior probability**\n",
-       "\n",
-       "\\[\n",
-       "P(D|T^+) = \\frac{0.019}{0.117} \\approx 0.1624\n",
-       "\\]\n",
-       "\n",
-       "That is about \\( 16.24\\% \\).\n",
-       "\n",
-       "---\n",
-       "\n",
-       "## **5. Interpretation**\n",
-       "\n",
-       "Even with a positive test result from a test that seems fairly accurate (95% sensitivity, 90% specificity), the probability the person actually has the disease is only about **16.24%**, because the disease is rare (2% prevalence).\n",
-       "\n",
-       "---\n",
-       "\n",
-       "**Final answer:**\n",
-       "\\[\n",
-       "\\boxed{0.1624}\n",
-       "\\]"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Answer Deepseek\n",
     "client = OpenAI(api_key=os.getenv('DEEPSEEK_API_KEY'), base_url='https://api.deepseek.com/v1')\n",
+    "model = 'deepseek-chat'\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    messages=[{\"role\": \"user\", \"content\": question}],\n",
-    "    model='deepseek-chat'\n",
+    "        model=model,\n",
+    "        messages=[{\"role\": \"user\", \"content\": question}],\n",
+    "    )\n",
+    "\n",
+    "answer = response.choices[0].message.content\n",
+    "\n",
+    "competitors.append(model)\n",
+    "answers.append(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ef7d4d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer Anthropic\n",
+    "from anthropic import Anthropic\n",
+    "\n",
+    "client = Anthropic(api_key=os.getenv('ANTHROPIC_API_KEY'))\n",
+    "model = 'claude-3-7-sonnet-latest'\n",
+    "\n",
+    "response = client.messages.create(\n",
+    "    model=model,\n",
+    "    messages = [{\"role\": \"user\", \"content\": question}],\n",
+    "    max_tokens=1000,\n",
+    ")\n",
+    "\n",
+    "answer = response.content[0].text\n",
+    "\n",
+    "competitors.append(model)\n",
+    "answers.append(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "41c69d80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer Groq\n",
+    "client = OpenAI(api_key=os.getenv('GROQ_API_KEY'), base_url='https://api.groq.com/openai/v1')\n",
+    "model = 'llama-3.3-70b-versatile'\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    messages=[{'role': 'user', 'content': question}],\n",
+    "    model = model,\n",
+    "    max_tokens=1000\n",
     ")\n",
     "\n",
     "answer = response.choices[0].message.content\n",
     "\n",
-    "display(Markdown(answer))"
+    "competitors.append(model)\n",
+    "answers.append(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a634be49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer Google Gemini\n",
+    "# client = OpenAI(api_key=os.getenv('GOOGLE_API_KEY'))\n",
+    "# model = 'gemini-2.0-flash'\n",
+    "\n",
+    "# response = client.chat.completions.create(\n",
+    "#     model=model,\n",
+    "#     messages=[{'role': 'user', 'content': question}],\n",
+    "#     max_tokens=1000\n",
+    "# )\n",
+    "\n",
+    "# answer = response.choices[0].message.content\n",
+    "\n",
+    "# competitors.append(model)\n",
+    "# answers.append(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "74f6e7c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(answers)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74f6e7c8",
+   "id": "64589654",
    "metadata": {},
    "outputs": [],
    "source": []
