Finish Lesson 2 and PydanticTest

--- a/1_foundations/Lesson2.ipynb
+++ b/1_foundations/Lesson2.ipynb
@@ -273,24 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "9b8fbd47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1]"
+       "[2, 3, 4]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_list = [1,2,3,4]\n",
-    "test_list[:1]"
+    "test_list[1:]"
    ]
   },
   {
