--- a/2_openai/4ifrog/lesson2.ipynb
+++ b/2_openai/4ifrog/lesson2.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f53feef0",
    "metadata": {},
    "outputs": [],
@@ -122,18 +122,7 @@
    "execution_count": null,
    "id": "1ba4d658",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Agent(name='Serious Sales Agent', instructions='You are a sales agent working for ComplAI, a company that provides a SaaS tool for ensuring SOC2 compliance and preparing for audits, powered by AI. You write professional, serious cold emails.', prompt=None, handoff_description=None, handoffs=[], model='gpt-4o-mini', model_settings=ModelSettings(temperature=None, top_p=None, frequency_penalty=None, presence_penalty=None, tool_choice=None, parallel_tool_calls=None, truncation=None, max_tokens=None, reasoning=None, metadata=None, store=None, include_usage=None, extra_query=None, extra_body=None, extra_headers=None, extra_args=None), tools=[], mcp_servers=[], mcp_config={}, input_guardrails=[], output_guardrails=[], output_type=None, hooks=None, tool_use_behavior='run_llm_again', reset_tool_choice=True)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use tools to enable some conditional logic\n",
     "\n",
@@ -144,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "96754eb4",
    "metadata": {},
    "outputs": [],
@@ -152,43 +141,30 @@
     "# To include tool in tools=[] of the agent\n",
     "# Wrap your function with the decorator\n",
     "# @function_tool\n",
+    "# eliminate putting everything into JSON\n",
     "\n",
     "from sendgrid import from_email, sendgrid\n",
     "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
     "import os\n",
     "\n",
+    "@function_tool\n",
     "def send_email(body: str):\n",
-    "    \"\"\" Send out an email with the give body to all sales prospects \"\"\"\n",
+    "    \"\"\" Send out an email with the given body to all sales prospects \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.getenv('SENDGRID_API_KEY'))\n",
     "    from_email = 'krisdas8@gmail.com'\n",
     "    to_email='krisdas8@gmail.com'\n",
     "    content = Content(mime_type='text/plain', content=body)\n",
-    "    mail = Mail(from_email=from_email, to_emails=to_email, subject=\"Sales email\", plain_text_content=\"body\").get()\n",
+    "    mail = Mail(from_email=from_email, to_emails=to_email, subject=\"Sales email\", plain_text_content=content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
     "    return {\"status\": \"success\"}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "19b306c1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnauthorizedError",
-     "evalue": "HTTP Error 401: Unauthorized",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnauthorizedError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msend_email\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbody\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mThis is a test email\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36msend_email\u001b[39m\u001b[34m(body)\u001b[39m\n\u001b[32m     14\u001b[39m content = Content(mime_type=\u001b[33m'\u001b[39m\u001b[33mtext/plain\u001b[39m\u001b[33m'\u001b[39m, content=body)\n\u001b[32m     15\u001b[39m mail = Mail(from_email=from_email, to_emails=to_email, subject=\u001b[33m\"\u001b[39m\u001b[33mSales email\u001b[39m\u001b[33m\"\u001b[39m, plain_text_content=\u001b[33m\"\u001b[39m\u001b[33mbody\u001b[39m\u001b[33m\"\u001b[39m).get()\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[43msg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmail\u001b[49m\u001b[43m.\u001b[49m\u001b[43msend\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpost\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest_body\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmail\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m {\u001b[33m\"\u001b[39m\u001b[33mstatus\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33msuccess\u001b[39m\u001b[33m\"\u001b[39m}\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/my-forked-agent/.venv/lib/python3.12/site-packages/python_http_client/client.py:277\u001b[39m, in \u001b[36mClient.__getattr__.<locals>.http_request\u001b[39m\u001b[34m(request_body, query_params, request_headers, timeout, **_)\u001b[39m\n\u001b[32m    271\u001b[39m     _logger.debug(\u001b[33m'\u001b[39m\u001b[33mPAYLOAD: \u001b[39m\u001b[38;5;132;01m{data}\u001b[39;00m\u001b[33m'\u001b[39m.format(\n\u001b[32m    272\u001b[39m         data=request.data))\n\u001b[32m    273\u001b[39m _logger.debug(\u001b[33m'\u001b[39m\u001b[33mHEADERS: \u001b[39m\u001b[38;5;132;01m{headers}\u001b[39;00m\u001b[33m'\u001b[39m.format(\n\u001b[32m    274\u001b[39m     headers=request.headers))\n\u001b[32m    276\u001b[39m response = Response(\n\u001b[32m--> \u001b[39m\u001b[32m277\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_make_request\u001b[49m\u001b[43m(\u001b[49m\u001b[43mopener\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrequest\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    278\u001b[39m )\n\u001b[32m    280\u001b[39m _logger.debug(\u001b[33m'\u001b[39m\u001b[38;5;132;01m{method}\u001b[39;00m\u001b[33m Response: \u001b[39m\u001b[38;5;132;01m{status}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{body}\u001b[39;00m\u001b[33m'\u001b[39m.format(\n\u001b[32m    281\u001b[39m     method=method,\n\u001b[32m    282\u001b[39m     status=response.status_code,\n\u001b[32m    283\u001b[39m     body=response.body))\n\u001b[32m    285\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/my-forked-agent/.venv/lib/python3.12/site-packages/python_http_client/client.py:184\u001b[39m, in \u001b[36mClient._make_request\u001b[39m\u001b[34m(self, opener, request, timeout)\u001b[39m\n\u001b[32m    179\u001b[39m exc.__cause__ = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    180\u001b[39m _logger.debug(\u001b[33m'\u001b[39m\u001b[38;5;132;01m{method}\u001b[39;00m\u001b[33m Response: \u001b[39m\u001b[38;5;132;01m{status}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{body}\u001b[39;00m\u001b[33m'\u001b[39m.format(\n\u001b[32m    181\u001b[39m     method=request.get_method(),\n\u001b[32m    182\u001b[39m     status=exc.status_code,\n\u001b[32m    183\u001b[39m     body=exc.body))\n\u001b[32m--> \u001b[39m\u001b[32m184\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m exc\n",
-      "\u001b[31mUnauthorizedError\u001b[39m: HTTP Error 401: Unauthorized"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "send_email(body=\"This is a test email\")"
    ]
@@ -197,6 +173,188 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ca9eb996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_email"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a1a0ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Turn agent into tools\n",
+    "\n",
+    "tool1 = sales_agent1.as_tool(tool_name=\"sales_agent1\", tool_description=\"Writes a cold sales email\")\n",
+    "tool2 = sales_agent2.as_tool(tool_name=\"sales_agent2\", tool_description=\"Writes a cold sales email\")\n",
+    "tool3 = sales_agent3.as_tool(tool_name=\"sales_agent3\", tool_description=\"Writes a cold sales email\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72996d7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tool1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0603a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [tool1, tool2, tool3, send_email]\n",
+    "\n",
+    "tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "818665e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = \"\"\"\n",
+    "You are a Sales Manager at ComplAI.  Your job is to select the best cold sales email using the sales_agent tool.\n",
+    "\n",
+    "Follow these steps carefully:\n",
+    "1. Generate drafts: Use all 3 sales_agent tools to each draft 1 unique cold sale email.  Do not proceed until all sales agent completed the draft.\n",
+    "2. Evaluate and select: Evaluate and select the best draft that you think will have the highest response from the email recipient.\n",
+    "3. Use the send_email tool to send the selected email.\n",
+    "\n",
+    "Crucial rules:\n",
+    "- You must use the sales agent tools to generate the draft -- do not write them yourself.\n",
+    "- You must use send ONE email using the send email tool -- never more than one.\n",
+    "\"\"\"\n",
+    "\n",
+    "sales_manager_agent = Agent(name=\"sales_manager\", instructions=instructions, tools=tools, model='gpt-4.1-nano')\n",
+    "\n",
+    "message = \"Send a cold sales email addressed to 'Dear CEO'\"\n",
+    "\n",
+    "with trace(\"Sales manager\"):\n",
+    "    result = await Runner.run(starting_agent=sales_manager_agent, input=message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d487f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Email subject writer agent\n",
+    "subject_instruction = \"You are given a cold sale email text. You will write a subject for that email text that will get the most attention from the email recipient.\"\n",
+    "subject_writer = Agent(name=\"subject writer\", instructions=subject_instruction, model='gpt-4.1-nano')\n",
+    "subject_tool = subject_writer.as_tool(tool_name='subject writer tool', tool_description='writes a subject for the cold sale email')\n",
+    "\n",
+    "# Email text to html conversion agent\n",
+    "html_instruction = \"You are given an email text that may be in a Markdown format.  You will convert that text into a html format that is beautifully laid out for easy read.\"\n",
+    "html_writer = Agent(name='html writer', instructions=html_instruction, model='gpt-4.1-nano')\n",
+    "html_tool = html_writer.as_tool(tool_name='html writer tool', tool_description='converts the email text format into html format')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0fb70b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Dict\n",
+    "\n",
+    "def send_html_email(subject: str, body: str) -> Dict[str, str]:\n",
+    "    \"\"\" Send out a html email with subject to potential client \"\"\"\n",
+    "    sg = sendgrid.SendGridAPIClient(api_key=os.getenv('SENDGRID_API_KEY'))\n",
+    "    from_email = Email(\"krisdas8@gmail.com\")\n",
+    "    to_email = To(\"krisdas8@gmail.com\")\n",
+    "    content = Content(mime_type='text/html', content=body)\n",
+    "    mail = Mail(from_email, to_email, subject, content).get()\n",
+    "    sg.client.mail.send.post(request_body=mail)\n",
+    "    return {\"status\": \"success\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e53cfdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_manager_instructions = \"You are an email formatter and sender.  \"\n",
+    "email_manager_instructions += \"You receive an email body message in text format.  \"\n",
+    "email_manager_instructions += \"You will use the subject_tool to get the subject for the email text.  \"\n",
+    "email_manager_instructions += \"You will use the html_tool to convert the email body text into html format.  \"\n",
+    "email_manager_instructions += \"Finally you will use send_html_email tool to send the email with the subject and html body.  \"\n",
+    "\n",
+    "tools = [subject_tool, html_tool, send_html_email]\n",
+    "\n",
+    "email_manager_agent = Agent(\n",
+    "    name=\"Email Manager\", \n",
+    "    instructions=email_manager_instructions,\n",
+    "    tools=tools,\n",
+    "    handoff_description=\"Convert an email to HTML and send it\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54643fac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tools = [tool1, tool2, tool3]\n",
+    "hand_off = [email_manager_agent]\n",
+    "\n",
+    "print(tools)\n",
+    "print(hand_off)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ae9e16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = \"\"\"\n",
+    "You are a Sales Manager at ComplAI.  Your job is to select the best cold sales email using the sales_agent tool.\n",
+    "\n",
+    "Follow these steps carefully:\n",
+    "1. Generate drafts: Use all 3 sales_agent tools to each draft 1 unique cold sale email.  Do not proceed until all sales agent completed the draft.\n",
+    "2. Evaluate and select: Evaluate and select the best draft that you think will have the highest response from the email recipient.\n",
+    "3. Handoff for sending email: Use the 'Email Manager' agent to send out email.\n",
+    "\n",
+    "Crucial rules:\n",
+    "- You must use the sales agent tools to generate the draft -- do not write them yourself.\n",
+    "- You must use ONE email using the Email Manager -- never more than one.\n",
+    "\"\"\"\n",
+    "\n",
+    "sales_manager_agent = Agent(\n",
+    "    name=\"Sales Manager\",\n",
+    "    instructions=instructions, \n",
+    "    tools=tools, \n",
+    "    handoffs=hand_off,\n",
+    "    model='gpt-4.1-nano')\n",
+    "\n",
+    "message = \"Send a cold sales email addressed to 'Dear CEO'\"\n",
+    "\n",
+    "with trace(\"Automated SDR\"):\n",
+    "    result = await Runner.run(starting_agent=sales_manager_agent, input=message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb793d0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -218,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
