Update 3_lab3 and lesson3

--- a/2_openai/4ifrog/lesson3.ipynb
+++ b/2_openai/4ifrog/lesson3.ipynb
@@ -78,26 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "772d86f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is the mechanism by which enzymes lower the activation energy of biochemical reactions?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from agents import Agent, Runner\n",
-    "from agents import AsyncOpenAI, OpenAIResponsesModel, trace"
+    "from agents import AsyncOpenAI, OpenAIResponsesModel, trace\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "9e73b53f",
    "metadata": {},
    "outputs": [],
@@ -109,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "ca1b9547",
    "metadata": {},
    "outputs": [],
@@ -121,39 +114,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "80a50632",
    "metadata": {},
    "outputs": [],
    "source": [
     "instruction = \"You provide answers to science and art history questions. Your knowledge is a college graduate level.\"\n",
-    "agent = Agent(name='Answer Provider Agent', instructions=instruction, model='gpt-4.1-nano')\n",
+    "deepseek_client = AsyncOpenAI(api_key=os.getenv('DEEPSEEK_API_CALL'), base_url='https://api.deepseek.com/v1')\n",
+    "deepseek_model = OpenAIResponsesModel(model='deepseek-chat', openai_client=deepseek_client)\n",
+    "agent = Agent(name='Answer Provider Agent', instructions=instruction, model=deepseek_model)\n",
     "answer_tool = agent.as_tool(tool_name='solution_provider', tool_description=\"Give an answer.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "694785a7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error getting response: Error code: 404 - {'error_msg': 'Not Found. Please check the configuration.'}. (request_id: None)\n",
+      "Error getting response: Error code: 404 - {'error_msg': 'Not Found. Please check the configuration.'}. (request_id: None)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here are two questions and their answers to help you learn something new today:\n",
+      "I encountered an issue while trying to retrieve the answers. However, I can provide you with the answers:\n",
       "\n",
-      "**Art Question:**  \n",
-      "How did the Romantic movement’s emphasis on emotion and individualism manifest in the works of J.M.W. Turner and Eugène Delacroix, and in what ways did their approaches differ in portraying nature and human experience?\n",
+      "**Art Question:** The development of linear perspective during the Renaissance allowed artists to create the illusion of depth on a flat surface, making their paintings more realistic. It introduced a systematic way to depict spatial relationships and scale, revolutionizing visual representation and influencing countless artists and artworks.\n",
       "\n",
-      "**Art Answer:**  \n",
-      "This question invites an analysis of Romanticism's core ideals by comparing Turner’s atmospheric, often tumultuous landscapes and seascapes with Delacroix’s vivid, expressive scenes and figure paintings. Turner’s work emphasizes the sublime power of nature through luminous, dynamic compositions often depicting natural phenomena, while Delacroix channels intense emotional expression and drama through vibrant color and energetic brushwork. Their differing techniques and subject matter illustrate the broad spectrum of Romantic artistic philosophy, with Turner focusing on nature’s awe-inspiring aspect and Delacroix emphasizing passionate human experience.\n",
-      "\n",
-      "**Science Question:**  \n",
-      "How does the process of photosynthesis convert light energy into chemical energy, and what are the key molecules involved in this transformation?\n",
-      "\n",
-      "**Science Answer:**  \n",
-      "Photosynthesis converts light energy into chemical energy through a series of reactions primarily occurring in the chloroplasts of plant cells. The key molecules involved are chlorophyll (which captures light energy), water (which is split to release electrons and oxygen), carbon dioxide (which is fixed into organic molecules), and glucose (the stored chemical energy). The process involves the light-dependent reactions, where light energy excites electrons leading to the formation of ATP and NADPH, and the Calvin cycle, where these molecules power the conversion of carbon dioxide into glucose.\n"
+      "**Science Question:** Photosynthesis converts light energy into chemical energy through a process that occurs in two main stages: the light-dependent reactions and the Calvin cycle. In the first stage, light energy is absorbed by chlorophyll and used to split water molecules, releasing oxygen and producing ATP and NADPH. In the second stage, these energy carriers help convert carbon dioxide into glucose, storing chemical energy for the plant.\n"
      ]
     }
    ],
@@ -221,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
